drivers: power: supply: Import xiaomi changes from topaz-t-oss
* battery_secret
* nopmi

Signed-off-by: mobxprjkt <mobxprjkt@proton.me>

--- a/arch/arm64/configs/gki_defconfig
+++ b/arch/arm64/configs/gki_defconfig
@@ -719,3 +719,16 @@ CONFIG_FUNCTION_ERROR_INJECTION=y
 
 # MI_THERMAL
 CONFIG_MI_THERMAL_INTERFACE=m
+
+# BATTERY
+CONFIG_ONEWIRE_GPIO=m
+CONFIG_BATT_VERIFY_BY_DS28E16=m
+ 
+# CHARGER
+CONFIG_NOPMI_CHARGER=m
+CONFIG_SMB1355_SLAVE_CHARGER=m
+CONFIG_SMB1398_CHARGER=m
+CONFIG_BQ2589X_CHARGER=m
+CONFIG_CHARGER_SC8551=m
+CONFIG_FG_SM5602=m
+CONFIG_QCOM_PMIC_VOTER=m
