drivers: power: reset: Import xiaomi changes from topaz-t-oss
* Minidump really useful for debug kernel incase if there is no ramoops logs .
* Xiaomi Also Disabled boot into EDL mode.

Signed-off-by: mobxprjkt <mobxprjkt@proton.me>

--- a/arch/arm64/configs/gki_defconfig
+++ b/arch/arm64/configs/gki_defconfig
@@ -732,3 +732,6 @@ CONFIG_BQ2589X_CHARGER=m
 CONFIG_CHARGER_SC8551=m
 CONFIG_FG_SM5602=m
 CONFIG_QCOM_PMIC_VOTER=m
+
+# MINIDUMP
+CONFIG_LAST_LOG_MINIDUMP=y
